--- a/memoria/Capitulos/conclusiones.tex
+++ b/memoria/Capitulos/conclusiones.tex
@@ -1,4 +1,26 @@
-\chapter{Conclusiones y desarrollos futuros}\label{pruebas}
+\chapter{Conclusiones y desarrollo futuro}\label{pruebas}
+
+\textbf{\large Conclusiones}\\
+
+TODO\\
+
+\textbf{\large Desarrollo futuro}\\
+
+Aunque hemos realizado y centralizado muchas de las herramientas más importantes, un juego tan grande como es Animal Crossing ofrece mucho margen de mejora para nuestra aplicación. Hay bastantes herramientas y funciones que nos hubiese gustado implementar, pero que por cuestión de tiempo hemos optado por no hacerlo para centrarnos en otras.\\
+
+A continuación listamos algunas de las funcionalidades más relevantes que pensamos que podríamos implementar en un futuro como mejoras para la aplicación:
+
+\begin{itemize}
+	
+	\item Modo anti-spoilers: una funcionalidad que consideramos bastante útil es un modo anti-spoilers para los listados de criaturas, ya que puede que haya ciertos jugadores que, a la llegada de un nuevo mes (y nuevas criaturas que capturar), quieran conocer pistas para saber sobre que momento del día y lugar pueden capturar aquellas criaturas que aún no tengan pero no deseen saber cuales son para llevarse la sorpresa, por lo que un modo que ocultase las imágenes y el nombre de las criaturas en el listado podría ser algo interesante para implementar.
+	
+	\item Al igual que los usuarios pueden subir su isla con su código de sueño, una funcionalidad muy interesante sería la de subir sus propios diseños. Dentro del juego el usuario puede crear diseños que puede usar tanto para vestimenta como para decoración, por lo que un catálogo de diseños donde los usuarios suban sus propias creaciones para compartirlas con el resto de jugadores, así como un sistema de favoritos y "Me gusta" es algo bastante útil para los jugadores.
+	
+	\item En el apartado de "Colecciones especiales" se podría añadir un filtro de búsqueda por texto para facilitarle la búsqueda al usuario en aquellas colecciones especialmente extensas, así como añadir algunas otras posibles colecciones que puedan ser de interés para el usuario, ya que el juego sigue actualizándose y añadiendo nuevo contenido.
+	
+	\item Un apartado sobre el que se ha hecho poco hincapié ha sido el de la jardinería. El juego posee un sistema de cultivo de flores que, a partir de unos colores base se pueden llegar a generar otras flores de colores distintos y menos comunes. Es un sistema complejo ya que dependiendo del color y origen de la flor, ésta posee un gen u otro que puede servir para cultivar un color en particular. Pensamos que una herramienta bastante útil podría ser una especie de matriz sobre la que el usuario pueda colocar las flores que desee en la forma que así vea conveniente y que la aplicación le muestre qué colores pueden ser generados en ciertas posiciones de la matriz siguiendo la disposición introducida.
+	
+\end{itemize}
 
 
 
