--- a/memoria/Capitulos/manual.tex
+++ b/memoria/Capitulos/manual.tex
@@ -1,2 +1,399 @@
-\chapter{Manual}\label{manual}
+\chapter{Manual de Usuario}\label{manual}
 
+Al acceder a la dirección TODO nos encontraremos con la siguiente pantalla:\\
+
+\figura{1}{img/cap9/1-inicio-not-logged.png}{Inicio}{fig:inicionl}{}
+
+Aunque muchas de las funciones de la aplicación son accesibles sin necesidad de disponer de una cuenta en la misma, primero procederemos al registro para poder así ver la funcionalidad completa de la aplicación.\\
+
+Para registrarnos, hacemos click en el botón de ``Empieza ya", lo que nos llevará a la pantalla de registro.\\
+
+\figura{1}{img/cap9/2-registro.png}{Registro}{fig:registro}{}
+
+Una vez rellenamos los datos de manera correcta, hacemos click en el botón "Regístrate" y si todo ha ido bien, nos devolverá a la página de inicio, pero esta vez con nuestra cuenta creada y la sesión iniciada.\\
+
+\figura{1}{img/cap9/3-inicio-logged.png}{Inicio con sesión iniciada}{fig:iniciol}{}
+
+Desde el inicio tenemos acceso a la mayoría de catálogos de la aplicación. Si nos vamos, por ejemplo, al catálogo de peces, veremos la siguiente pantalla.\\
+
+\figura{1}{img/cap9/4-catalogo-peces.png}{Catálogo peces}{fig:catpeces}{}
+
+Aquí, al igual que en todos los catálogos, disponemos de unos filtros para poder realizar una búsqueda algo más precisa. En el caso de los peces, podemos filtrar por el tamaño de su sombra, por los lugares en los que podemos encontrarlos y por su nombre. Además, en el caso de haber iniciado sesión podemos filtrar por aquellos peces que hemos obtenido ya o no.\\
+
+En la gran mayoría de catálogos, hay un botón de check para que el usuario pueda ir indicando si ha obtenido el pez o no. De esta forma puede llevar un recuento de aquellos peces que ya ha obtenido para ir completando su colección.\\
+
+\figura{0.9}{img/cap9/5-peces-obtenidos.png}{Peces obtenidos}{fig:pecesobtenidos}{}
+
+Además, podemos hacer click en las fotos de los peces para obtener información sobre los mismos, como el lugar y la hora donde se puede obtener, así como otros datos. Además, podemos ver los meses en los que el pez está disponible tanto para el hemisferio norte como para el hemisferio sur si hacemos click en el botón superior izquierda.\\
+
+\figura{0.6}{img/cap9/6-pez-info-norte.png}{Info hemisferio norte}{fig:infonorte}{}
+
+\figura{0.6}{img/cap9/7-pez-info-sur.png}{Info hemisferio sur}{fig:infosur}{}
+
+Además, tenemos la opción de navegar por las distintas páginas de los resultados, bien avanzando o retrocediendo de uno en uno con los botones de las flechas, o bien haciendo click sobre la página deseada.\\
+
+\figura{0.7}{img/cap9/8-paginacion.png}{Paginación}{fig:paginacion}{}
+
+De la misma forma, la gran mayoría de catálogos funcionan de manera idéntica con ciertas diferencias, como obviamente, la información que se muestra al hacer click en un ítem. Hay otros cambios en algunos catálogos, como en el de obras de arte, en el cual podemos observar que hay ciertas piezas con un botón, que indica que esa obra tiene una falsificación.\\
+
+\figura{0.7}{img/cap9/9-cat-arte.png}{Catálogo obras de arte}{fig:catarte}{}
+
+Si hacemos click en ese botón, podemos ver un menú de información con las imágenes, tanto de la versión real como de la falsificación, para intentar ayudar al usuario a diferenciarlas.\\
+
+\figura{0.8}{img/cap9/10-falsificacion.png}{Falsificación}{fig:falsificacion}{}
+
+Tanto en el catálogo de muebles como en el de ropa, existen ítems con variaciones. Estas variaciones podemos verlas desplazándonos con una barrita de desplazamiento y si hacemos click, veremos que cambia la imagen principal del ítem por el de la variante seleccionada.\\
+
+\figura{0.5}{img/cap9/11-catalogo-muebles-variaciones.png}{Variaciones}{fig:variaciones}{}
+
+\figura{0.5}{img/cap9/12-cat-muebles-variante.png}{Variación}{fig:variacion}{}
+
+En el catálogo de canciones, ademas de poder llevar recuento de aquellas canciones que hemos obtenido, podemos escucharlas. Si hacemos click en la imagen de la foto, esta empezará a reproducirse, y además disponemos de algunos controles en el reproductor abajo a la izquierda, tanto para pausar/continuar la canción como para ajustar el volumen.
+
+............. 13 - Catalogo canciones ............
+
+Una vez terminado con los catálogos de la página de inicio, tenemos algunas otras herramientas
+accesibles desde la barra superior de navegación.
+
+............. 14 - Nav ............
+
+Si hacemos click en la imágen de la izquierda, nos llevará a la página de inicio.
+Luego en la parte central disponemos de cuatro botones. El primero, "Cazar ahora", nos lleva
+a un catálogo de los tres tipos de criaturas capturables, con la pecualiaridad de que solo
+nos muestran aquellas criaturas capturables en la fecha y hora actuales.
+
+............. 15 - Cazar ahora ............
+
+Aquí, no solo disponemos de los filtros que tienen en su catálogo correspondiente, sino que
+además podemos cambiar el mes y hora, asi como el hemisferio (de manera global) para poder
+ver aquellas criaturas en función del mes y hora, de forma que le sea más sencillo al usuario
+y no tenga que dar vueltas por la isla sin saber qué o dónde se puede encontrar.
+
+Si hemos modificado el mes y/o la hora y deseamos volver a la actual, es tan fácil como
+hacer click en el botón de la flecha roja.
+
+............. 16 - Filtros cazar ahora ............
+
+Dentro de este catálogo, de base apareceremos en la pantalla de los insectos, por lo que si
+queremos ver los peces o las criaturas marinas es tán fácil como hacer click en el botón
+correspondiente a la derecha de los filtros.
+
+Volviendo a la barra de navegación superior, el siguiente botón sería el de "Sueños", pero para
+explicar por completo su funcionalidad necesitamos antes pasar por el perfil, por lo que se
+hablará de este catálogo más adelante. Por lo que primero haremos click en el botón que
+pone "Mercado Nabos", que nos llevará a la siguiente pantalla.
+
+............. 17 - Mercado nabos ............
+
+En esta página podemos predecir tanto el precio de los nabos en la isla esta semana, así
+como el patrón que seguirá, y los posibles máximos y mínimos, todo para intentar sacar el
+mayor beneficio posible.
+
+Para empezar, debemos rellenar tantos campos como podamos. El primero indica si es la primera
+vez que el usuario compra nabos o no, ya que la primera vez siempre se obtiene el mismo patrón.
+El segundo botón indica el patrón de la semana anterior, que también dispone de un botón en
+caso de que el usuario no lo sepa. Por último, hay que indicar el precio al que se compraron
+los nabos el domingo.
+
+............. 18 - Datos nabos ............
+
+A partir de aquí, hay que indicar el precio al que Tendo y Nendo compran los nabos, tanto
+por la mañana como por la tarde. A mayor datos se introduzcan, mas precisa será la predicción.
+Como podemos ver, indicando los tres primeros campos, así como los precios del lunes, ya
+obtenemos una predicción bastante segura.
+
+............. 19 - Tabla prediccion ............
+
+Como podemos observar, se nos indica una fila por cada posible "ruta" que puede suceder esa semana.
+A la izquierda vemos el patrón que podemos obtener, seguido de dos porcentajes que indican,
+el primero la probabilidad del patrón, y el segundo la probabilidad de la "ruta" dentro del
+patrón. Luego observamos los precios, tanto los indicados por el usuario como los posibles
+para el resto de la semana. Los distintos colores representan el beneficio que puede representar,
+siendo rojo el menor beneficio y el verde oscuro el mayor beneficio.
+
+Por último, las dos últimas columnas nos indican tanto el mínimo garantizado como el 
+máximo potencial al que se puede llegar.
+
+Por ejemplo, si nos fijamos en la tabla, vemos que hay un 100% de probabilidades de que esta
+semana obtengamos un patrón "Pico pequeño", dentro del cual, a falta de más datos, tenemos 6
+posibles "rutas" las cuales tienen todas la misma probabilidad de ocurrir. Sin embargo, todas
+tienen el mismo mínimno y máximo, siendo 139 y 200 respectivamente. 
+
+............. 20 - Tabla precisa ............
+
+Si rellenamos más datos a lo largo de la semana, vemos que se van reduciendo el número de filas
+ya que la predicción es mas precisa. Una vez rellenado los datos hasta la mitad del jueves,
+observamos que efectivamente, el patrón de esta semana es el "Pico pequeño", que el mínimo y 
+máximo son los comentados anteriormente y que, el beneficio lo obtendremos entre la segunda mitad del
+jueves al sábado.
+
+Obviamente, al ser datos ficticios no representa al 100% la precisión de la herramienta, pero
+con datos reales obtenidos del juego que resulten mas coherentes con el algoritmo establecido
+dentro del juego, se pueden obtener resultados bastante precisos.
+
+............. 21 - Info nabos ............
+
+Si bajamos un poco, veremos que el usuario dispone de información para aprender cómo funciona
+el mercado de nabos dentro del juego, así como los posibles patrones que existen. Si coloca
+el cursor encima de cualquiera de las tarjetas de los patrones, podrá ver que aparece una
+breve descripción del funcionamiento del patrón en cuestión. De esta forma, el usuario puede
+acceder a esta información para intentar rellenar los datos de la manera más precisa posible,
+obteniendo así un mejor resultado.
+
+............. 22 - Info patrones ............
+
+La siguiente parada dentro de la barra de navegación superior sería el "Calendario", el cual
+nos llevará a la siguiente pantalla al hacer click en él.
+
+............. 23 - Calendario ............
+
+En esta pantalla disponemos de un calendario por el que podemos navegar, en el cuál se nos
+indican los eventos disponibles, siendo estos los cumpleaños de los distintos vecinos, así como
+otros eventos más especiales. En azul clarito se resalta el día en el que nos encontramos,
+y si colocamos el cursor sobre cualquiera de los iconos situados en la parte inferior izquierda
+de cada día, podremos ver el título del evento. Si se trata de un cumpleaños, la celda obtendrá
+un color verde, mientras que si se trata de otro tipo de evento, tendrá un color distinto.
+
+............. 24 - Calendario cumple ............
+
+Si por ejemplo nos vamos al 31 de octubre, veremos que el icono corresponde a uno de los NPCs
+del juego, y al colocar el cursor sobre el, no solo nos indica que se trata de Halloween, sino
+que la celda obtiene un color anaranjado. Si en este caso (tratándose de un evento especial),
+hacemos click en el icono, se nos abrirá un menú con información del evento,
+
+............. 25 - Calendario halloween ............
+
+............. 26 - Evento halloween ............
+
+A continuación, como podemos ver en la barra de navegación, a la derecha del todo tenemos
+nuestro nombre de usuario seguido de una foto. Si hacemos click en la foto se nos abrirá un
+menú desplegable que nos da la opción de, o ir a nuestro perfil, o cerrar sesión. En este caso
+haremos click en el botón "Perfil", que nos llevará tal y como indica su nombre, a nuestro perfil.
+
+............. 27 - Nav perfil ............
+
+............. 28 - Perfil ............
+
+Observemos primero el menú de la izquierda. Representa el pasaporte del usuario, donde podremos
+ver la información proporcionada en el registro, así como el signo del zodíaco al que 
+pertenece. Si el usuario quisiera modificar los datos, sería tan sencillo como hacer click
+en el lapiz azul del pasaporte, lo que nos llevaría al modo edición del mismo.
+
+............. 29 - Pasaporte editando ............
+
+Una vez en dicho modo edición, podemos cambiar los datos a nuestro antojo, siempre y cuando
+cumplan los criterios de validación. Una vez listo, hacemos click en el botón del check
+verde para confirmar la operación. En caso de querer cancelar la operación, es tan fácil como volver
+a dejar los datos como estaban y hacer click en el check verde.
+
+............. 30 - Pasaporte updated ............
+
+Como podemos ver, se ha actualizado la información y además se ha cambiado el color de fondo
+del pasaporte. El fondo varía de forma aleatoria tanto al acceder al perfil como al actualizar
+la información.
+
+Ahora fijémonos en el menú que se encuentra a la derecha. Ahi podemos encontrar dos de las 
+herramientas más importantes y útiles para el usuario. En primer lugar, se trata de las
+tareas personales. Al acceder al perfil por primera vez se encontrará vacío, como es nuestro
+caso. Sin embargo, haciendo click en el lápiz que encontramos a la derecha de dicho menú, entramos
+en el modo edición del mismo.
+
+............. 31 - Tareas edicion ............
+
+Como podemos observar, ha aparecido un botón amarillo con un '+'. Si hacemos click en ese
+botón, se nos creará una tarea nueva. Podemos crear hasta un máximo de 10 tareas, de forma
+que cuando creemos la décima ya no aparecerá el botón de crear. A continuación vamos a crear 
+tres tareas.
+
+............. 32 - Tres tareas ............
+
+Una vez creadas las tareas, estando en el modo edición, si hacemos click en cualquiera de las
+tareas, se nos abre el menú para personalizar la tarea. Aquí podemos, o bien cambiarle el icono
+a la tarea (ya que por defecto trae el de la hoja) haciendo click en el botón "Actualizar" una ve
+hayamos elegido el icono deseado, o bien borrarla haciendo click en el icono de la papelera.
+Para cerrar el menú es tan fácil como hacer click fuera del menú o deslizarnos en la página.
+Por ejemplo, vamos a cambiarle el icono a las dos primeras tareas y vamos a borrar la última.
+
+............. 33 - Menu tareas ............
+
+............. 34 - Dos tareas ............
+
+Una vez hayamos terminado, hacemos click en el check verde para salir del menú de edición y
+ahora podemos activar o desactivar las tareas. Si hacemos click en cualquier tarea, se activará,
+cambiando su color a verde. Si volvemos a hacer click, se desactivará cambiando a azul. Si tenemos
+tareas activadas, al final del día se reiniciarán, ya que representan tareas diarias. De esta forma
+el usuario puede crear algunas tareas personalizables para representar su rutina en el juego,
+activarlas para recordar que ya la ha realizado y que se desactiven automáticamente para repetir
+el proceso cada día.
+
+............. 35 - Tareaa done ............
+
+
+Ahora pasemos a la siguiente herramienta, los visitantes semanales. Aquí el usuario dispone de
+unos recuadros que representan tanto la semana actual como la anterior. Los recuadros correspondientes
+al Sábado y Domingo son inalterables ya que, con ciertas excepciones debido a torneos puntuales,
+siempre van a venir los mismos visitantes durante esos días.
+
+............. 36 - Visitantes semanales ............
+
+En el resto de recuadros, si hacemos click en el botón de añadir, se nos abre un menú en el que
+veremos una lista de los posibles visitantes. Dependiendo de los que ya nos hayan visitado, a corde
+con cómo funciona en el juego, habrá algunos iconos que no se podrán seleccionar ya que habrán alcanzado
+su límite. Como máximo, solo se puede repetir un visitante en dos semanas conjuntas. Para mostrarlo, 
+procedemos a rellenar los recuadros tal y como se ve en la imagen.
+
+............. 37 - semana rellena ............. 
+
+Si volvemos a hacer click en cualquiera de los botones de añadir, veremos que los visitantes
+de la semana pasada, así como Alcatifa, que ya se ha nos ha visitado en las dos semanasrepetido, 
+serán menos visibles y no podrán seleccionarse.
+
+............. 38 - menu Visitantes ............
+
+En caso de querer modificar un visitante o eliminarlo, es tan fácil como hacer click en su icono y, o
+bien cambiarlo por otro, o bien hacer click en el icono de la papelera. Además, en la parte inferior
+de la herramienta podemos ver que hay un botón con el icono de Estela. Si hacemos click en él, podremos
+alternar entre dos estados, para indicar así si ya ha venido Estela esta semana a la isla.
+
+Una vez hayamos modificado los datos, veremos que el icono de guardar (el check verde) empieza a parpadear.
+Esto significa que tenemos cambios sin guardar, por lo que para guardar los datos hay que hacer click.
+Si todo ha ido bien, veremos un mensaje confirmando que se ha guardado correctamente.
+
+............. 39 - Visitantes guardados ............
+
+A continuación, seguimos con el siguiente apartado. Si deslizamos la página hacia abajo, veremos la siguiente
+sección del perfil: Mis vecinos. En este apartado, el usuario puede añadir los vecinos que estén en
+su isla. Al principio, si es una cuenta nueva, veremos diez recuadros solo con los botones para añadir.
+
+............. 40 - Vecinos vacios ............
+
+Para añadir un vecino, si hacemos click en cualquiera de los botones, se abrirá un menú en el que 
+podremos buscar y seleccionar el vecino que deseemos. Una vez seleccionado, le damos al check verde
+para guardar los datos. Podremos ver como ahora aparece nuestro primer vecino, así como un corazón
+al lado. Este corazón indica la amistad que se tiene con el vecino, que por defecto viene a uno.
+
+Ahora, si colocamos el cursor sobre el recuadro del vecino, podremos observar que se nos muestra a la
+izquierda un recuardo con información del mismo, así como su foto.
+
+............. 41 - Info Vecino ............
+
+Si queremos cambiar o eliminar al vecino, es tan fácil como hacer click en su icono y volver a elegir
+otro y guardar, o a darle al botón de la papelera. A continuación, vamos a añadir más vecinos para
+explicar con mas claridad el siguiente apartado.
+
+Si hacemos click en el corazón de cada vecino, veremos que se nos abre un menú con seis corazones. 
+Aquí se puede cambiar el nivel de amistad del vecino haciendo click sobre el corazón con el número
+deseado.
+
+............. 42 - Menu amistad ............
+
+Si nos fijamos, en la parte superior derecha de la herramienta podemos ver un botón azul. Si hacemos click en él,
+se nos abre un desplegable con información sobre el nivel de amistad de los vecinos, de forma que el 
+usuario pueda saber qué nivel atribuir a cada vecino.
+
+............. 43 - Info amistad ............
+
+Además, en este desplegable vemos que hay un botón "Calcular porcentaje". Si nos fijamos, en los
+recuadros han aparecido algunas cosas nuevas.
+
+............. 44 - Porcentaje mudanza vacio ............
+
+Como vemos, cada vecino tiene un icono de bloquear, así como un pequeño recuadro azul. Esta sección sirve
+para calcular el porcentaje de mudanza de cada vecino, que tiene que ver con el nivel de amistad de cada
+uno. Siguiendo la información que podemos encontrar en el menú desplegable, podemos rellenar los niveles
+de amistad de cada vecino, así como excluirlos del cálculo si fuera necesario haciendo click en el botón de
+bloqueo. Si un vecino está siendo bloqueado, el icono aparecerá en rojo, y por lo tanto no contará para
+el cálculo de la probabilidad.
+
+............. 45 - Icono bloqueo ............
+
+Una vez tengamos listo tanto la amistad, como aquellos vecinos bloqueados (en caso de haberlos),
+le damos al botón de "Calcular porcentaje" que podemos encontrar más arriba. Podemos observar
+que han aparecido unos números en los recuadros azules, que indican la probabilidad que tiene cada 
+vecino de mudarse de la isla. Como vemos, al haber bloqueado a Patri, esta no cuenta para el cálculo
+de la probabilidad y por lo tanto, no tiene número.
+
+............. 46 - Porcentaje mudanza ............
+
+Tal y como funciona el juego, aquellos vecinos con mayor amistad tienen menos probabilidad de mudarse,
+por lo que, como podemos ver, Boliche que tiene un nivel seis de amistad (el máximo), es el que tiene
+menos probabilidades de mudarse (casi un 11%), en comparación con Cacho y Lope, que al ser los que menos
+amistad tienen, hay más probabilidades de que sea uno de los dos el que decida mudarse (cada uno con
+casi un 34% aprox.).
+
+Una vez hayamos terminado, podemos volver a la vista original cerrando el menú desplegable haciendo click
+en el botón azul que se encuentra en la zona superior derecha del menú desplegable.
+
+Sigamos con la próxima herramienta, las Colecciones Especiales.
+
+............. 47 - Colecciones especiales ............
+
+Lo primero que nos encontramos es una serie de botones que indican la colección. Una de ellas estará
+resaltada para denotar que es la colección activa. Si hacemos click en los distintos botones, vemos
+que los items de abajo van variando. Una vez hayamos seleccionado la colección deseada, podemos
+observar que hay varios items, cada uno con su imágen y nombre, así como un botón con forma de check
+gris. Si hacemos click en este botón, se volverá rojo indicando así que ya disponemos de este ítem.
+
+Además, en caso de que sea necesario, hay botones para navegar por las paginas de items a los lados
+de la herramienta.
+
+............. 48 - Coleccion especial check ............
+
+Por último, tenemos el álbum de fotos del usuario. Si hacemos click en el botón del menú de la derecha,
+nos aparecerá un menú para introducir la url de la imágen que queramos añadir a nuestro álbum.
+
+............. 49 - Album fotos ............
+
+Una vez dispongamos de alguna imagen, aparecerá en grande una a la izquierda, y en caso de tener
+más de una, podemos seleccionar la imagen que queremos ver en grande, o bien de forma temporal colocando
+el cursor encima de la imagen, o bien haciendo click para que se mantenga esa selección, que se mostrará
+algo mas grande que las demás.
+
+............. 50 - Añadir imagen ............
+
+............. 51 - Album fotos relleno ............
+
+Si deseamos borrar alguna foto, es tan sencillo como activar el modo borrado haciendo click en la
+papelera. Sabremos que estamos en el modo borrado porque cambiará el fondo del menú morado a un color
+rojo y las imágenes temblarán si el cursor se sitúa sobre ellas. Una vez activado, si hacemos click 
+en las imágenes, las borraremos.
+
+............. 52 - Borrar imagen ............
+
+Ahora que hemos visto el funcionamiento del álbum de fotos, podemos pasar a explicar la última herramienta
+de la página, que sería el catálogo de sueños, al que podremos acceder si hacemos click en el botón
+"Sueños" situado en la barra de navegación superior. Esto nos llevará a un catálogo donde podremos ver
+los sueños que han subido los usuarios.
+
+............. 53 - Cat sueños ............
+
+En cada item podremos ver, el nombre de la isla del sueño, su código para poder viajar al mismo,
+el usuario que ha subido el sueño, así como algunas fotos de la isla que haya querido subir
+el usuario. En caso de que haya subido más de una (hasta un límite de tres), podemos navegar
+entre las mismas mediante las flechas situadas a los lados.
+
+............. 54 - Sueño ............
+
+Además, cada sueño tiene un corazón en la parte superior derecha que indica el número de
+"Me gusta" que ha recibido, y haciendo click sobre el podemos darle o quitarle el "Me gusta".
+Con esto, no solo podemos indicar que nos ha gustado un sueño, sino que le sirve al usuario
+como una lista personal de favoritos, ya que en los filtros puede filtrar tanto por el nombre
+de la isla como por aquellos a los que le haya dado "Me gusta".
+
+............. 55 - Cat sueños filtro like ............
+
+Si el usuario lo desea, puede subir un sueño haciendo click en el botón "Mi sueño" que encontrará
+junto a los filtros a la derecha. Al hacer click, se abrirá un menú tal y como se ve en la imágen.
+Aquí podremos introducir el código de nuestro sueño, así como de una a tres imagenes, las cuales
+podremos seleccionar o deseleccionar haciendo click en ellas. Una vez hallamos rellenado los datos,
+pulsamos en el botón del check verde para confirmar la creación de nuestro sueño.
+
+............. 56 - Crear sueño ............
+
+............. 57 - Sueño creado ............
+
+En caso de querer modificar tanto el código como las imagenes, es tan sencillo como volver a hacer
+click en el botón de "Mi sueño" y modificar los datos. En caso de querer eliminarlo, en el mismo
+menú podemos hacer click en el icono de la papelera y confirmar nuestra decisión.
+
+............. 58 - Crear sueño ............
